--- a/package.json
+++ b/package.json
@@ -19,18 +19,20 @@
   },
   "homepage": "https://github.com/JX-Zhuang/webpack#readme",
   "devDependencies": {
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.19.0",
     "@babel/parser": "^7.15.7",
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-proposal-decorators": "^7.18.2",
     "@babel/plugin-proposal-private-methods": "^7.17.12",
     "@babel/plugin-proposal-private-property-in-object": "^7.17.12",
-    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.17.12",
     "@babel/traverse": "^7.15.4",
     "and": "0.0.3",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.0.2",
     "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.16.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -40,6 +42,10 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "html-webpack-plugin": "^5.5.0",
+    "image-minimizer-webpack-plugin": "^3.3.0",
+    "imagemin": "^8.0.1",
+    "imagemin-optipng": "^8.0.0",
+    "jest": "^29.0.2",
     "less": "^4.1.2",
     "less-loader": "^11.0.0",
     "morgan": "^1.10.0",
@@ -53,6 +59,8 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "eslint-webpack-plugin": "^3.2.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
