--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.4.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "source-map": "^0.7.4"
   }
 }
