--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.17.12",
     "@babel/preset-env": "^7.19.0",
     "@babel/preset-react": "^7.17.12",
+    "@babel/preset-typescript": "^7.18.6",
     "@babel/traverse": "^7.15.4",
     "and": "0.0.3",
+    "autoprefixer": "^10.4.11",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.0.2",
     "babel-loader": "^8.2.5",
@@ -46,21 +48,28 @@
     "imagemin": "^8.0.1",
     "imagemin-optipng": "^8.0.0",
     "jest": "^29.0.2",
-    "less": "^4.1.2",
+    "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.1",
-    "postcss-loader": "^7.0.0",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.6.0",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.8.3",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "webpack-dev-server": "^4.9.0",
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-nano": "^1.1.1"
   },
   "dependencies": {
     "eslint-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.4.2",
+    "mini-css-extract-plugin": "^2.6.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "source-map": "^0.7.4"
